WIP: Fix ptFaresHandler